# triptych-detector-trim

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
